 - RDS API update: support for enhanced monitoring, and more new features
 - CloudFront API update: support for compressing and SSL to origin
 - CloudTrail API update: support for multiregion trails
 - Config API update
 - EMR API update: support for VPC EMR
 - ECS API update: deployment options
 - IoT API update: Topic rules 

0.21 16 Dec 2015
 - Bug fix: calls supposed to not return any object were failing since 0.21 (jare)
 - MojoAsyncCaller starts using Future::Mojo, a better alternative to MojoX::IOLoop::Future
 - Directory Service API update
 - Route53 API update: traffic policies
 - RDS API update: support for PortNumbers
 - RDS API update: support for KMS encrypted clusters
 - AutoScaling API update: InstanceProtection from scale in

0.20 3 Dec 2015
 - S3 can now get and put objects. Entire API should now be working correctly (glenveegee)
 - Better schema validation in builders (by Oriol Soriano) 
 - Paws::Credential::File doesn't throw warnings when users don't have $ENV{HOME} (by A.Gimenez)
 - EC2 docu update
 - RDS support for cross account snapshot sharing. New instance types too
 - Inspector API update
 - DeviceFarm API update
 - EC2 API update: dedicated hosts
 - ECS API update
 - ElasticBeanstalk API update

0.19 12 Nov 2015
 - Fix issues with POD documentation. Some head2 tags didn't have a newline above
   them, causing them to not behave as head tags
 - We were having problems checking error messages for dns and connection failures
   Different messages on different platforms / locales were making tests fail, and
   Paws harder to install
 - Generate JSON API Maps without xml_keys and xml_values. Not needed.
 - add preloading and immutabilizing to documentation
 - SQS docu update
 - ApiGateway support for variables
 - S3 API Update: support for ServerSideEncryption in UploadPart 

0.18 6 Nov 2015 
 - Important change: Paws license has been changed to a more permissive Apache 2.0
 - IAM update: SimulateCustomPolicy updated. Docs updated too