@@ -1,0 +1,18 @@
+
+package Paws::CloudFormation::ContinueUpdateRollbackOutput;
+  use Moose;
+
+1;
+
+### main pod documentation begin ###
+
+=head1 NAME
+
+Paws::CloudFormation::ContinueUpdateRollbackOutput
+
+=head1 ATTRIBUTES
+
+
+
+=cut
+
