@@ -62,13 +62,7 @@ each parameter.
 
 A list of all the template resource types that are defined in the
 template, such as C<AWS::EC2::Instance>, C<AWS::Dynamo::Table>, and
-C<Custom::MyCustomInstance>. Use the following syntax to describe
-template resource types: C<AWS::*> (for all AWS resources),
-C<Custom::*> (for all custom resources), C<Custom::I<logical_ID>> (for
-a specific custom resource), C<AWS::I<service_name>::*> (for all
-resources of a particular AWS service), and
-C<AWS::I<service_name>::I<resource_logical_ID>> (for a specific AWS
-resource).
+C<Custom::MyCustomInstance>.
 
 
 
