@@ -17,8 +17,8 @@ Paws::CloudFormation::ListStacksOutput
 
 =head2 NextToken => Str
 
-String that identifies the start of the next list of stacks, if there
-is one.
+If the output exceeds 1 MB in size, a string that identifies the next
+page of stacks. If no additional page exists, this value is null.
 
 
 
